--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,10 +1,17 @@
-<h1>404 Not Found</h1>
-<br>
+
+<div class="main-background-container">
 <section class="error-container">
   <span class="four"><span class="screen-reader-text">4</span></span>
   <span class="zero"><span class="screen-reader-text">0</span></span>
   <span class="four"><span class="screen-reader-text">4</span></span>
+  <br>
+  <span class="not-found"><span>Not Found</span></span>
+  <br>
+  <div class="link-container">
+    <a routerLink="/member" class="more-link">Back</a>
+  </div>
+
+
 </section>
-<div class="link-container">
-  <a routerLink="/member" class="more-link">Back</a>
+
 </div>
