--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-    background-color: #b8ffe4;
+    background-color: #d6f9ec;
     padding-top: 20px;
   }
 
