--- a/src/app/fines/fines.component.html
+++ b/src/app/fines/fines.component.html
@@ -1,1 +1,38 @@
-<p style="font-size: 100px;">History</p>
+<h1 class="fines__title" style="display: flex; justify-content: center;">Fines</h1>
+
+<section class="fines">
+  <div *ngIf="fines.length > 0; else noFines" class="fines__list">
+    <table class="fines__table">
+      <thead>
+        <tr>
+          <th style="text-align: center; width: 80px;">Fine ID</th>
+          <th style="text-align: center; width: 80px;">Book ID</th>
+          <th style="text-align: center; width: 100px;">Amount</th>
+          <th style="text-align: center; width: 100px;">Status</th>
+          <th style="text-align: center; width: 160px;">Date</th>
+          <th style="text-align: center; width: 100px;">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let fine of fines" class="fines__row">
+          <td style="text-align: center;">{{ fine.fineId }}</td>
+          <td style="text-align: center;">{{ fine.bookId }}</td>
+          <td style="text-align: center;">{{ fine.amount | currency:'INR':'symbol':'1.2-2'}}</td>
+          <td style="text-align: center;">{{ fine.fineStatus }}</td>
+          <td style="text-align: center;">{{ fine.transactionDate }}</td>
+          <td style="text-align: center;">
+            <button 
+              (click)="payFine(fine.fineId)" 
+              [disabled]="fine.fineStatus === 'PAID'">
+              Pay
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <ng-template #noFines>
+    <p class="fines__empty">No fines found for this member.</p>
+  </ng-template>
+</section>
