--- a/src/app/borrowing-history/borrowing-history.component.html
+++ b/src/app/borrowing-history/borrowing-history.component.html
@@ -4,20 +4,27 @@
   <thead class="table-dark">
     <tr>
       <th>Transaction ID</th>
+      <th>Member ID</th>
+      <th>Member name</th>
+      <th>Book ID</th>
       <th>Borrow Date</th>
       <th>Return Date</th>
       <th>Status</th>
-      <th>Book ID</th>
- 
+   
+
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let txn of borrowingHistory">
       <td>{{ txn.transactionId }}</td>
+      <td>{{txn.memberId}}</td>
+      <td>{{txn.memberName}}</td>
+      <td>{{ txn.book?.bookId }}</td>
       <td>{{ txn.borrowDate }}</td>
       <td>{{ txn.returnDate }}</td>
       <td>{{ txn.status }}</td>
-      <td>{{ txn.book?.bookId }}</td>
+      
+      
     </tr>
   </tbody>
 </table>
