--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -6,7 +6,7 @@
     </button>
     <div [ngClass]="{'dropdown-menu': true, 'visible': dropdownVisible}">
       <div class="dropdown-content">
-        <a routerLink="/profile">Profile</a>
+        <a routerLink="/member/profile">Profile</a>
         <br />
         <a href="#" (click)="logout()">Logout</a>
       </div>
@@ -29,11 +29,11 @@
 
   <!-- Search -->
   <div class="search-container" *ngIf="searchVisible">
-    <input 
-      type="text" 
-      placeholder="Search by name, author, or genre..." 
-      [(ngModel)]="searchTerm" 
-      (input)="filterBooks()" 
+    <input
+      type="text"
+      placeholder="Search by name, author, or genre..."
+      [(ngModel)]="searchTerm"
+      (input)="filterBooks()"
     />
     <button class="search-btn" (click)="filterBooks()">🔍</button>
   </div>
