--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -8,7 +8,7 @@
   <span class="not-found"><span>Not Found</span></span>
   <br>
   <div class="link-container">
-    <a routerLink="/member" class="more-link">Back</a>
+    <a (click)="handleBackClick()" class="more-link">Back</a>
   </div>
 
 
