--- a/src/app/book/book-list/book-list.component.css
+++ b/src/app/book/book-list/book-list.component.css
@@ -10,7 +10,7 @@
   max-width: 900px;
   margin: auto;
   padding: 0px;
- 
+
 }
 
 .main-heading {
@@ -61,24 +61,27 @@ ul {
 }
 
 .book-image {
-  height: 150px;
-  object-fit: cover;
+  width: 100%;
+  height: 200px;
+  object-fit: contain; /* changed from 'cover' */
   border-radius: 10px;
   margin-bottom: 1rem;
-  width: 100%;
+  background-color: white;
+  padding: 8px; /* gives spacing for images that are smaller */
 }
+
 
 .title {
   font-size: 1.2rem;
   font-weight: bold;
-  color: white;
+  color: black;
   margin-bottom: 0.3rem;
   text-align: center;
 }
 
 .author,
 .copies {
-  color: white;
+  color: black;
   font-size: 0.9rem;
   margin: 0.2rem 0;
   text-align: center;
